# launcher

./: .gitattributes  .gitignore  .gitmodules  .jdk-versions.sh  .travis.yml  CMakeLists.txt  LICENSE  README.md  arm64-linux-gcc.cmake  bootstrap.py  build-linux-aarch64.sh  build-linux-x86_64.sh  build-linux.sh  build-macos.sh  build-osx-aarch64.sh  build-osx-x64.sh  build-osx.sh  build-win-aarch64.sh  build-win32.sh  build-win64.sh  build-windows-vs2019.bat  build-windows-vs2022.bat  build-windows-win32.sh  build-windows-win64.sh  build.gradle  build.gradle.kts  checkstyle.xml  deploy-dependencies.py  fips  fips.yml  gradle.properties  pom.xml  runelite-createdeb.sh  settings.gradle  settings.gradle.kts  settings.xml  snap-build-README.md  snap-build-readme.md  version.json
appimage/: openosrs.desktop  prepare-appimage.sh  runelite.desktop
checkstyle/: checkstyle.xml  suppressions.xml
ci/: msvc-env.cmd
fips-configs/: packr-linux-aarch64-make-release.yml  packr-osx-arm64-xcode-release.yml  packr-osx-x64-xcode-release.yml  packr-win32-vs2019-release.yml  packr-win32-vs2022-release.yml
gradle/: libs.versions.toml  verification-metadata.xml
innosetup/: dircheck.pas  openosrs.iss  openosrs32.iss  runelite.iss  runelite32.iss  runeliteaarch64.iss  upgrade.pas  usernamecheck.pas
liblauncher/: CMakeLists.txt  acl.cpp  build.bat  elevation.cpp  reg.cpp
native/: AUTHORS  CMakeLists.txt  build.bat  main.cpp
native/src/: CMakeLists.txt  packr.cpp  packr.h
native/src/linux/: packr_linux.cpp
native/src/macos/: packr_macos.cpp
native/src/win32/: packr_win32.cpp  runelite.manifest  runelite.rc
osx/: Info.plist  signing.entitlements
packr/: Info.plist  linux-aarch64-config.json  linux-x64-config.json  macos-aarch64-config.json  macos-x64-config.json  openosrs.icns  (+7 more)
src/: CMakeLists.txt  packr.cpp  packr.h
src/deb/: RuneLite.desktop  RuneLiteNoHwAcc.desktop  runelite  runelite-no-hw-acc
src/deb/control/: control
src/linux/: packr_linux.cpp
src/macos/: packr_macos.cpp
src/main/java/net/runelite/launcher/: ArtifactResolver.java  CertPathExtractor.java  ColorScheme.java  ConfigurationFrame.java  CustomScrollBarUI.java  FatalErrorDialog.java  FilePermissionManager.java  FilePermsStep.java  FilesystemPermissions.java  FontManager.java  ForkLauncher.java  GzipBodyHandler.java  HardwareAccelerationMode.java  ImageUtil.java  InfoPanel.java  JagexLauncherCompatibility.java  JarVerifier.java  JvmLauncher.java  LaunchMode.java  Launchable.java  Launcher.java  LauncherFrame.java  LauncherProperties.java  LauncherSettings.java  LinkBrowser.java  MessagePanel.java  OS.java  OpenOSRSSplashScreen.java  PackrConfig.java  ReflectionLauncher.java  RuneLiteLoader.java  RuneliteLoader.java  SplashScreen.java  TrustManagerUtil.java  Updater.java  Util.java  VerificationException.java
src/main/java/net/runelite/launcher/beans/: Artifact.java  Bootstrap.java  Diff.java  Platform.java  Update.java
src/main/java/net/runelite/launcher/ui/: LauncherUI.java
src/main/java8/net/runelite/launcher/: CertPathExtractor.java
src/main/kotlin/net/rsprox/patch/: PatchExtensions.kt  PatchResult.kt
src/main/kotlin/net/rsprox/patch/runelite/: InMemoryZip.kt  RuneLitePatcher.kt
src/main/resources/: Info.plist  launcher.properties  log4j2.xml  logback.xml  oraclejre8.json  runelite.crt  runelite.iss  runelite32.iss
src/main/resources/net/runelite/launcher/: launcher.properties  runelite.crt
src/test/java/net/runelite/launcher/: ArtifactResolverTest.java  UpdaterTest.java  VersionTest.java
src/test/resources/: hdiutil-mount-plist.xml
src/win32/: packr_win32.cpp
(+14 files in other folders)
